syntax = "proto3";

package users;

option go_package = "ququiz/lintang/quiz-query-service/pb";


service UsersService {
  rpc getUserById(GetUserRequest) returns (User) {}
  rpc getUserByIds(GetUserRequestByIds) returns (GetUserResponseByIds) {}
}

message GetUserRequest {
  string id = 1; // UUID
}

message GetUserRequestByIds {
  repeated string ids = 1; // UUID
}

message User {
  string id = 1;
  string email = 2;
  string fullname = 3;
  string username = 4;
}

message GetUserResponseByIds {
  repeated User users = 1;
}

